objects/Account_team__c.object
<CustomObject>
    <fields>
        <fullName>Account_Access__c</fullName>
        <label>Account Access</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read Only</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account team</relationshipLabel>
        <relationshipName>Account_team</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Get the user&apos;s business unit.</description>
        <formula>TEXT(User__r.Business_Unit_BU__c)</formula>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Access__c</fullName>
        <label>Contact Access</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edit</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>User&apos;s Country</description>
        <formula>User__r.Country</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Get the user division</description>
        <formula>TEXT(User__r.Division_DIV__c)</formula>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Access__c</fullName>
        <label>Opportunity Access</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edit</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <label>Partner Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_User_Role__c</fullName>
        <label>Partner User Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_PG__c</fullName>
        <formula>TEXT(User__r.Product_Group_PG__c)</formula>
        <label>Product Group(PG)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <label>Team Role</label>
        <picklist>
            <picklistValues>
                <fullName>Account ABB Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Div Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account BU Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account PG Lead </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Responsible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Responsible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group, Strategic or Local Major Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Segment Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ext Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ext Channel Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>User__r.Title</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Email_Address__c</fullName>
        <description>Get user Email Address</description>
        <formula>User__r.Email</formula>
        <label>User Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>of_Account_Teams__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of Account Teams</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account team</label>
    <nameField>
        <displayFormat>AccTeam-{0000}</displayFormat>
        <label>Account team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_user_roles</fullName>
        <active>true</active>
        <errorConditionFormula>IF((
NOT($Setup.Validation_Override__c.Exclude__c)&amp;&amp;
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c)&amp;&amp; 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c)&amp;&amp; 
!(User__r.Is_External_User__c)  &amp;&amp;
(
ISPICKVAL( Team_Role__c ,&apos;Ext Agent&apos;)  ||  ISPICKVAL(Team_Role__c,&apos;Ext Channel Partner&apos;)  ||  ISPICKVAL(Team_Role__c,&apos;Ext Rep&apos;)
)
),true,false)</errorConditionFormula>
        <errorMessage>You cannot assign External User Roles to an internal users.</errorMessage>
    </validationRules>
</CustomObject>